# aktsp2026

./: README.md  aktsp2026.opam  aktsp2026.opam.locked  dune-project  projects.md
.github/workflows/: ci.yml
src/: dune
src/abseval/: abseval.ml  dune
src/ast/: ast.ml  dune
src/cfg/: cfg.ml  dune  edge.ml  node.ml  node.mli
src/constraint/: constraint.ml  dune  solver.ml  sys.ml
src/crashcourse/: basics.ml  collections.ml  dune  types.ml
src/domain/: boolDomain.ml  domain.ml  dune  envDomain.ml  intDomain.ml  mapDomain.ml  setDomain.ml
src/eval/: common.ml  concrete.ml  dune
src/fixpoint/: dune  fixpoint.ml
src/hello/: hello.ml
src/modelcheck/: checker.ml  dune  model.ml  modelcheck.ml
src/symbolic/: dune  symbolic.ml
src/toyatp/: README.md  bool.ml  dune  magic.ml  sat.ml  smt.ml  zebra.ml
src/toylangs/: bool.ml  dune  expr.ml  imp.ml  rnd.ml
src/wp/: dune  wp.ml
test/abseval/: abseval_test.ml  dune
test/constraint/: constraint_test.ml  dune
test/crashcourse/: basics_test.ml  collections_test.ml  crashcourse_test.ml  dune  types_test.ml  types_test.mli
test/domain/: domain_test.ml  dune  intDomain_test.ml
test/eval/: concrete_test.ml  dune  eval_test.ml
test/fixpoint/: dune  fixpoint_test.ml  nfa_eps_test.ml  transition_test.ml
test/modelcheck/: dune  modelcheck_test.ml
test/ounit-todo/: dune  oUnitTodo.ml
test/toyatp/: bool_test.ml  bool_test.mli  dune  magic_test.ml  sat_test.ml  smt_test.ml  toyatp_test.ml  zebra_test.ml
test/toylangs/: bool_test.ml  dune  expr_test.ml  imp_test.ml  rnd_test.ml  toylangs_test.ml
(+18 files in other folders)
